--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
       destination: C:\inetpub\wwwroot
 hooks:
     BeforeInstall:
-      - location: deploy-scripts\before-instal.ps1
+      - location: deploy-scripts\before-install.ps1
         timeout: 900
     AfterInstall:
       - location: deploy-scripts\after-install.ps1
