--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: windows
 files:
-    - source: build_output\
+    - source: build_output
       destination: C:\inetpub\wwwroot
 hooks:
     BeforeInstall:
